# pman

./: .editorconfig  .pylintrc  .travis.yml  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
pman/: __init__.py  _build.py  _core.py  _utils.py  basicrenderer.py  basicrendermanager.py  build_apps.py  cli.py  config.py  core.py  creationutils.py  exceptions.py  hooks.py  native2bam.py  plugins.py  pman_build.py  rendermanager.py  setuptools.py  shim.py  venvwrapper.py
pman/plugins/: __init__.py  blend2bam.py  common.py  copyfile.py  native2bam.py
pman/templates/: bpbase.py  main.py  pylintrc  pyproject.toml  requirements.txt  setup.py  test_imports.py
tests/: conftest.py  test_config.py  test_pman.py
