[build-system]
requires = [
    "setuptools >= 61",
    "setuptools-scm >= 8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-pman"
dynamic = ["version"]
authors = [
    {name = "Mitchell Stokes"},
]
description = "A Python package to help bootstrap and manage Panda3D applications"
readme = "README.md"
keywords = ["panda3d", "gamedev"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d-blend2bam >= 0.24.0",
    "tomli >= 2.0.1",
    "rich ~= 13.5.0",
    "setuptools >= 61.0",
]
requires-python = ">= 3.9"

[project.urls]
homepage = "https://github.com/Moguri/pman"

[dependency-groups]
dev = [
    "panda3d",
    "pytest",
    "ruff >= 0.4.0",
    "pytest-ruff",
]

[project.scripts]
pman = "pman.cli:main"
native2bam = "pman.native2bam:main"

[project.entry-points."pman.plugins"]
blend2bam = "pman.plugins.blend2bam:Blend2BamPlugin"
native2bam = "pman.plugins.native2bam:Native2BamPlugin"
copyfile = "pman.plugins.copyfile:CopyFilePlugin"

[project.entry-points."setuptools.finalize_distribution_options"]
pman = "pman.setuptools:finalize_distribution_options"

[tool.setuptools]
packages = ["pman"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "YTT", "ASYNC", "BLE", "FBT",
    "B", "A", "C4", "DTZ", "ISC", "ICN", "PIE", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID", "TCH", "TD", "FIX", "ERA", "PLC", "PLE",
    "PLW", "PERF", "RUF"
]

[tool.pytest.ini_options]
addopts = "--ruff --ignore=pman/templates/test_imports.py"
