[metadata]
name = panda3d_pman
version = attr: pman.version.__version__
author = Mitchell Stokes
description = A Python package to help bootstrap and manage Panda3D applications
long_description = file: README.md
long_description_content_type = text/markdown
keywords = panda3d, gamedev
license = MIT
license_file = LICENSE.txt
url = https://github.com/Moguri/pman
project_urls =
    Bug Tracker = https://github.com/Moguri/pman/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    panda3d-blend2bam >= 0.14
    tomli >= 2.0.1
python_requires = >=3.6

[options.extras_require]
test =
    panda3d
    pytest
    pylint == 2.4.*
    pytest-pylint

[options.entry_points]
console_scripts =
    pman = pman.cli:main
    native2bam = pman.native2bam:main
pman.plugins =
    blend2bam = pman.plugins:Blend2BamPlugin
    native2bam = pman.plugins:Native2BamPlugin

[global]
verbose = 0

[tool:pytest]
addopts = --pylint --ignore=pman/templates/test_imports.py
